--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "predeploy": "npm run build",
