--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
     "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -12,6 +14,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-swipeable-views": "^0.13.3",
     "redux": "^4.0.4"
   },
   "scripts": {
